platforms/infrastructure/kubernetes/manifests/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    softwareos-base/audit-log-level: minimal
    softwareos-base/governance-policy: standard-v1
    softwareos-base/uri: softwareos-base://k8s/core/ingress/machine-native-ops-ingress
    softwareos-base/urn: urn:softwareos-base:k8s:core:ingress:machine-native-ops-ingress:sha256-b2fbdef686c0368b866632d840f11c0fc72e861cca627bc55b1cc42520f15e96
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  labels:
    app.kubernetes.io/app.kubernetes.io/component: ingress
    app.kubernetes.io/component: eco-component
    app.kubernetes.io/instance: eco-instance
    app.kubernetes.io/name: machine-native-ops
    app.kubernetes.io/part-of: softwareos-base
    app.kubernetes.io/version: 1.0.0
    softwareos-base/environment: development
    softwareos-base/governance: aligned
    softwareos-base/owner: eco-system
    softwareos-base/part-of: softwareos-base
    softwareos-base/platform: core
    governance.machinenativeops.io/charter-version: 2.0.0
  name: machine-native-ops-ingress
  namespace: platform-03
spec:
  ingressClassName: nginx
  rules:
  - host: machinenativeops.io
    http:
      paths:
      - backend:
          service:
            name: aep-engine-service
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: api.machinenativeops.io
    http:
      paths:
      - backend:
          service:
            name: file-organizer-service
            port:
              number: 80
        path: /file-organizer
        pathType: Prefix
      - backend:
          service:
            name: instant-service
            port:
              number: 80
        path: /instant
        pathType: Prefix
      - backend:
          service:
            name: elasticsearch-search-service
            port:
              number: 80
        path: /search
        pathType: Prefix
      - backend:
          service:
            name: esync-platform-service
            port:
              number: 80
        path: /esync
        pathType: Prefix
